--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ today = ["chrono"]
 test_lib = []
 
 [dependencies]
+chumsky = "0.9.3"
+itertools = "0.12.0"
+pico-args = "0.5.0"
+tailsome = "1.0.0"
 
 # Template dependencies
 chrono = { version = "0.4.31", optional = true }
