--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ test_lib = []
 
 [dependencies]
 chumsky = "0.9.3"
-itertools = "0.12.0"
 pico-args = "0.5.0"
+slotmap = "1.0.7"
 tailsome = "1.0.0"
