--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,12 @@ test_lib = []
 
 [dependencies]
 chumsky = "0.9.3"
+enum_dispatch = "0.3.12"
+indicatif = "0.17.7"
+itertools = "0.12.0"
 pico-args = "0.5.0"
+rangemap = "1.4.0"
+rayon = "1.8.0"
 slotmap = "1.0.7"
 tailsome = "1.0.0"
+tap = "1.0.1"
