--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,4 +36,4 @@ itertools = "0.12.0"
 rangemap = "1.4.0"
 rayon = "1.8.0"
 slotmap = "1.0.7"
-tailsome = "1.0.0"chumsky = "0.9.3"
+tailsome = "1.0.0"
