--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,6 @@ tinyjson = "2.5.1"
 # Solution dependencies
 chumsky = { version = "0.9.3", default-features = false }
 tap = "1.0.1"
-enum_dispatch = "0.3.12"
 indicatif = "0.17.7"
 itertools = "0.12.0"
 rangemap = "1.4.0"
@@ -38,3 +37,4 @@ rayon = "1.8.0"
 slotmap = "1.0.7"
 tailsome = "1.0.0"
 num = "0.4.1"
+strum = { version = "0.25.0", features = ["derive"] }
